fixing layout bugs on 'logoped' page in tabs/slider timetable

--- a/app/styles/sass/sections/_section23.scss
+++ b/app/styles/sass/sections/_section23.scss
@@ -56,11 +56,17 @@
         margin-bottom: 0;
     }
     .nav-item {
+      @include tablet {
+        &.nav-item-active {
+          width: 100%;
+        }
+      }
         .tabs-nav__trigger {
             @include tablet {
                 display: flex;
                 flex-direction: column;
                 font-size: 18px;
+                
             }
             @include mobile-land {
                 font-size: 16px;
@@ -147,6 +153,7 @@
 
 .section23-nav-tabs {
     display: flex;
+    flex-wrap: nowrap;
     justify-content: space-evenly;
     border: none;
     position: relative;
@@ -171,6 +178,7 @@
     .nav-item {
         flex: 0 0 16.6666666667%;
         border-bottom: unset;
+        display: block !important;
         @include mobile-land {
             width: 100%;
             .nav-link {
@@ -212,8 +220,11 @@
             border: none;
             background-color: $light-gray;
             opacity: 1;
+            @include tablet-land {
+              background-color: $light-gray !important;
+            }
             @include mobile-land {
-                border-radius: 20px !important;
+              border-radius: 20px !important;
             }
         }
         span {
